--- a/trunk/Languages/default-gr.xml
+++ b/trunk/Languages/default-gr.xml
@@ -10,7 +10,7 @@
                        description="Shareaza Default Greek Skin File"
                        link="http://www.shareaza.com/"
                        email="contact@shareaza.com"
-                       version="2.0.5.0"
+                       version="2.1.0.1"
                        type="Language"
                        language="gr"
                        prompt="Πατήστε εδώ για να διαλέξετε τα Ελληνικά ως γλώσσα."
@@ -449,7 +449,8 @@
                <menu text="_Βοήθεια">
                        <item id="ID_HELP_FAQ" text="Ο οδηγός του Shareaza"/>
                        <item id="ID_HELP_FORUMS" text="Shareaza _Forums"/>
-            <item id="ID_HELP_FIREWALLS" text="_Router Help"/>
+                       <item id="ID_HELP_FIREWALLS" text="Βοήθεια για το _Router"/>
+                       <item id="ID_HELP_SECURITY" text="Βοήθεια για την _Ασφάλεια"/>
                        <separator/>
                        <menu text="_Ιστοσελίδες">
                                <item id="ID_HELP_HOMEPAGE" text="_Shareaza.com"/>
@@ -534,7 +535,8 @@
                <menu text="_Βοήθεια">
                        <item id="ID_HELP_FAQ" text="Ο _οδηγός του Shareaza"/>
                        <item id="ID_HELP_FORUMS" text="Shareaza _Forums"/>
-                       <item id="ID_HELP_FIREWALLS" text="_Router Help"/>
+                       <item id="ID_HELP_FIREWALLS" text="Βοήθεια για το _Router"/>
+                       <item id="ID_HELP_SECURITY" text="Βοήθεια για την _Ασφάλεια"/>
                        <separator/>
                        <menu text="_Ιστοσελίδες">
                                <item id="ID_HELP_HOMEPAGE" text="_Shareaza.com"/>
@@ -613,7 +615,8 @@
                <menu text="_Βοήθεια">
                        <item id="ID_HELP_FAQ" text="Ο _οδηγός του Shareaza"/>
                        <item id="ID_HELP_FORUMS" text="Shareaza _Forums"/>
-                       <item id="ID_HELP_FIREWALLS" text="_Router Help"/>
+                       <item id="ID_HELP_FIREWALLS" text="Βοήθεια για το _Router"/>
+                       <item id="ID_HELP_SECURITY" text="Βοήθεια για την _Ασφάλεια"/>
                        <separator/>
                        <menu text="_Ιστοσελίδες">
                                <item id="ID_HELP_HOMEPAGE" text="_Shareaza.com"/>
@@ -2403,7 +2406,6 @@
        <string id="8231" value="Δεν υπάρχουν πηγές"/>
        <string id="8232" value="Άνοιξε"/>
        <string id="8233" value="Επισκόπηση"/>
-       <string id="8234" value="%s of %s (%.2f%%)"/>
        <string id="8235" value="Συνολική ταχύτητα μεταφοράς:"/>
        <string id="8236" value="Εκτιμώμενος χρόνος που απομένει:"/>
        <string id="8237" value="Ποσοστό που έχει κατέβει:"/>
@@ -2411,7 +2413,6 @@
        <string id="8239" value="Ολοκλήρωση"/>
        <string id="8240" value="Το Shareaza μετακινεί το αρχείο:"/>
        <string id="8241" value="Το Shareaza κοιτά το αρχείο για σφάλματα:"/>
-       <string id="8242" value="%s of %s (%.2f%%)"/>
        <string id="8243" value="Volume uploaded:"/>
        <string id="8288" value="Έρευνα στην βιβλιοθήκη σου"/>
        <string id="8289" value="Έρευνα "/>
@@ -2422,7 +2423,6 @@
        <string id="8294" value="Recent Additions"/>
        <string id="8295" value="Βαθμολόγησε το αρχείο"/>
        <string id="8304" value="N/A"/>
-       <string id="8305" value="%i of %i"/>
        <string id="8306" value="Περιοχη"/>
        <string id="8307" value="Τύπος"/>
        <string id="8308" value="Μέγεθος"/>
@@ -2838,6 +2838,7 @@
        <string id="19001" value="Πρέπει να διαλέξετε ένα όνομα και έναν κωδικό."/>
        <string id="19002" value="Αδύνατο να δεχτείτε σύνδεση, Το URL είναι μη διαθέσιμο."/>
        <string id="20000" value="Δεν υπάρχει διαθέσιμο URN"/>
+       <string id="20002" value="of"/>  <!-- e.g. 1 of 10 -->
        <string id="20100" value="Σύνδεση"/>
        <string id="20101" value="Ζήτηση"/>
        <string id="20102" value="Απάντηση"/>
