--- a/Languages/default-es.xml
+++ b/Languages/default-es.xml
@@ -358,7 +358,7 @@
             <!-- HIT MONITOR WINDOW -->
             <toolbar name="CHitMonitorWnd">
                 <button id="ID_SEARCH_DOWNLOAD" text="Descargar"/>
-               <button id="ID_HITMONITOR_SEARCH" text="Reaccesar"/>
+               <button id="ID_HITMONITOR_SEARCH" text="Reacceder"/>
                 <separator/>
                 <button id="ID_HITMONITOR_PAUSE" text="Pausar"/>
                 <button id="ID_SEARCH_CLEAR" text="Limpiar"/>
@@ -927,7 +927,7 @@
                <item id="ID_DOWNLOADS_HELP" text="_Ayuda..."/>
     </menu>
     <menu name="CDownloadsWnd.Source">
-               <item id="ID_TRANSFERS_CONNECT" text="_Accessar"/>
+               <item id="ID_TRANSFERS_CONNECT" text="_Acceder"/>
         <separator/>
                <item id="ID_BROWSE_LAUNCH" text="_Explorar Usuario"/>
                <item id="ID_TRANSFERS_CHAT" text="_Chat con Usuario"/>
@@ -1371,7 +1371,7 @@
     </menu>
     <!-- DISCOVERY SERVICES WINDOW -->
     <menu name="CDiscoveryWnd">
-        <item id="ID_DISCOVERY_QUERY" text="_Accesar"/>
+        <item id="ID_DISCOVERY_QUERY" text="_Acceder"/>
         <item id="ID_DISCOVERY_ADVERTISE" text="P_ublicar"/>
         <item id="ID_DISCOVERY_REMOVE" text="_Eliminar"/>
         <separator/>
@@ -2267,7 +2267,7 @@
        <tip id="ID_TRAFFIC_WINDOW" message="Open a new graph window..."/>
        <tip id="ID_TRAY_OPEN" message="Abrir la ventana de Shareaza."/>
        <tip id="ID_TRANSFERS_CHAT" message="Comenzar un chat con el usuario."/>
-       <tip id="ID_TRANSFERS_CONNECT" message="Accesar la fuente seleccionada."/>
+       <tip id="ID_TRANSFERS_CONNECT" message="Acceder la fuente seleccionada."/>
        <tip id="ID_TRANSFERS_DISCONNECT" message="Desconectar las transferencias seleccionadas."/>
        <tip id="ID_TRANSFERS_FORGET" message="Desconectar y olvidar las fuentes seleccionadas."/>
        <tip id="ID_UPLOADS_AUTO_CLEAR" message="Limpiar los archivos subidos automáticamente."/>
@@ -3077,7 +3077,7 @@
     </dialog>
 
        <dialog name="CNetworksSettingsPage" cookie="StBuStBuStBuStBuStBuStBuSt" caption="Networks">
-               <control caption="Shareaza tiene la habilidad de accesar varias redes de compartimiento de archivos. En esta página se pueden seleccionar las redes que serán usadas, y ajustar las configuraciones de las misMás."/>
+               <control caption="Shareaza tiene la habilidad de acceder varias redes de compartimiento de archivos. En esta página se pueden seleccionar las redes que serán usadas, y ajustar las configuraciones de las misMás."/>
         <control caption="Red Gnutella2:"/>
         <control caption="Gnutella2 es la red principal de Shareaza, esta ofrece el mejor rendimiento y funciones. Altamente recomendada."/>
         <control caption="Conectar a Gnutella2 (G2)"/>
@@ -3301,7 +3301,7 @@
         </dialog>
 
        <dialog name="CWizardNetworksPage" cookie="StBuStBuStBuSt" caption="Bienvenido(a) a Shareaza [6 of 7]">
-               <control caption="Shareaza es una aplicacion para compartir archivos de proposito en general y puede accesar a varias redes P2P al mismo tiempo.  Aquí puedes seleccionar a que redes te quieres conectar.  Pero recuerda que luego puedes seleccionar otras redes."/>
+               <control caption="Shareaza es una aplicacion para compartir archivos de proposito en general y puede acceder a varias redes P2P al mismo tiempo.  Aquí puedes seleccionar a que redes te quieres conectar.  Pero recuerda que luego puedes seleccionar otras redes."/>
                <control caption="Conectar a Gnutella2 (Altamente Recomendado)"/>
                <control caption="La Red Gnutella2 es la red premiere de Shareaza, ofreciendo Más características y rendimiento que otra red P2P."/>
                <control caption="Conectar a eDonkey2000"/>
