--- a/Languages/default-de.xml
+++ b/Languages/default-de.xml
@@ -453,6 +453,7 @@ Other:
 				<item id="ID_HELP_FAQ" text="Shareaza _Anleitung" />
 				<item id="ID_HELP_FORUMS" text="Shareaza _Forum" />
 				<item id="ID_HELP_FIREWALLS" text="_Router Hilfe" />
+				<item id="ID_HELP_SECURITY" text="_Sicherheits Hilfe"/>
 				<separator />
 				<menu text="_Websites">
 					<item id="ID_HELP_HOMEPAGE" text="_Shareaza.com" />
@@ -538,6 +539,7 @@ Other:
 				<item id="ID_HELP_FAQ" text="Shareaza _Anleitung" />
 				<item id="ID_HELP_FORUMS" text="Shareaza _Forum" />
 				<item id="ID_HELP_FIREWALLS" text="_Router Hilfe" />
+				<item id="ID_HELP_SECURITY" text="_Sicherheits Hilfe"/>
 				<separator />
 				<menu text="_Websites">
 					<item id="ID_HELP_HOMEPAGE" text="_Shareaza.com" />
@@ -617,6 +619,7 @@ Other:
 				<item id="ID_HELP_FAQ" text="Shareaza _Anleitung" />
 				<item id="ID_HELP_FORUMS" text="Shareaza _Forum" />
 				<item id="ID_HELP_FIREWALLS" text="_Router Hilfe" />
+				<item id="ID_HELP_SECURITY" text="_Sicherheits Hilfe"/>
 				<separator />
 				<menu text="_Websites">
 					<item id="ID_HELP_HOMEPAGE" text="_Shareaza.com" />
@@ -1854,6 +1857,7 @@ Other:
 		<tip id="ID_WINDOW_REMOTE" message="Die Shareaza Fernbedienung ein- oder ausblenden." />
 		<tip id="ID_HELP_FIREWALLS" message="Finden Sie heraus wie Sie ihren Router/Firewall konfigurieren müssen." />
 		<tip id="ID_TOOLS_SEEDTORRENT" message="Den markierten Torrent über BitTorretn seeden." />
+		<tip id="ID_HELP_SECURITY" message="Hinweise, wie Sie ihren Computer vor schädlichen Programmen (Viren) schützen.">
 	</commandTips>
 	<!-- Localised String Table -->
 	<strings>
@@ -2188,7 +2192,6 @@ Other:
 		<string id="8231" value="Keine Quellen" />
 		<string id="8232" value="Öffnen" />
 		<string id="8233" value="Vorschau" />
-		<string id="8234" value="%s von %s (%.2f%%)" />
 		<string id="8235" value="Geschwindigkeit:" />
 		<string id="8236" value="Geschätzte Dauer:" />
 		<string id="8237" value="Heruntergeladen:" />
@@ -2215,7 +2218,6 @@ Other:
 		<string id="16996" value="Ein Teil dieser Datei kann nicht abgespielt werden. Möglicherweise m&#251;ssen Sie zusätzliche Codecs herunterladen." />
 		<string id="16997" value="Es wird keine Datei wiedergegeben.  Doppelklicken Sie eine Datei in ihrer Bibliothek um sie abzuspielen." />
 		<string id="8304" value="N/A" />
-		<string id="8305" value="%i von %i" />
 		<string id="8306" value="Im Ordner" />
 		<string id="8307" value="Typ" />
 		<string id="8308" value="Größe" />
@@ -2349,7 +2351,6 @@ Other:
 		<string id="17487" value="BitTorrent Kopplung mit %s hergestellt, handshaking..." />
 		<string id="8240" value="Shareaza verschiebt den Download:" />
 		<string id="8241" value="Shareaza überprüft den Download auf Fehler:" />
-		<string id="8242" value="%s von %s (%.2f%%)" />
 		<string id="8243" value="Hochgeladen: " />
 		<string id="17248" value="Unvollständige eDonkey Downloads werden importiert..." />
 		<string id="17249" value="Fertig, %i unvollständige Downloads erfolgreich importiert." />
@@ -2394,6 +2395,7 @@ Other:
 		<string id="19001" value="Sie müssen Benutzername und Passwort angeben." />
 		<string id="19002" value="Kann keine Verbindungen akzeptieren, URL nicht verfügbar." />
 		<string id="20000" value="Keine URN verfügbar." />
+		<string id="20002" value="von"/>
 		<string id="20100" value="Verbinden" />
 		<string id="20101" value="Anfordern" />
 		<string id="20102" value="Antwort" />
