--- a/trunk/Languages/default-ru.xml
+++ b/trunk/Languages/default-ru.xml
@@ -2835,7 +2835,7 @@
        <string id="17491" value="Торрент «%s» уже в Вашем списке загрузок, и его нельзя распространить."/>
        <string id="17492" value="Ошибка загружая торрент файл «%s».  Возможно, это неправильный торрент."/>
        <string id="17493" value="Невозможно создать BitTorrent разделяемый файл «%s»."/>
-       <string id="17494" value="Этот торрент содержит файл «%s», но Shareaza не может найти этого файла в Вашем хранилище.  Если возможно, переместите файл в ту же самую папку как и торрент и попробуйте снова."/>
+       <string id="17494" value="Этот торрент содержит файл «%s», но Shareaza не может найти этого файла в Вашем хранилище.  Если возможно, переместите файл в разделяемую папку и попробуйте снова."/>
        <string id="17495" value="Этот торрент содержит файл «%s» версии %s, но версия Вашего файла - %s."/>
        <string id="17496" value="Призошла ошибка во время  копирования «%s» в BitTorrent разделяемый файл."/>
        <string id="17497" value="Призошла неясная ошибка во время рапространения «%s»."/>
@@ -3049,7 +3049,7 @@
        <dialog name="CUploadsSettingsPage" cookie="BuBuBuBuBuStEdmsBuCoBuBuBuStEdStCoBuSyBuBuBuSt" caption="Выгрузки">
                <control caption="_Опции:"/>
                <control caption="Разделять новые загрузки"/>
-               <control caption="Огранич. выгр.(режим узла)"/>
+               <control caption="Лимит. выгрузки в режиме узла"/>
                <control caption="Разрешить предв. просмотр"/>
                <control caption="Удалять ID3 теги из mp3"/>
                <control caption="Лимит на уник. хост:"/>
